--- a/styles/website.scss
+++ b/styles/website.scss
@@ -5,12 +5,13 @@ $book-background: black;
 $page-background: black;
 $sidebar-background: black;
 $color-border: $color-gray-dark;
-$font-size-base 					: 12px;
+$font-size-base 					: 13px;
 $font-size-large					: 1.5rem;
 $font-size-small 					: 0.8rem;
 
 $sidebar-padding-v : 0px;
 $sidebar-padding-h : 0px;
+$sidebar-font-size : 1rem;
 
 $sidebar-logo-height: auto;
 
