--- a/styles/website.scss
+++ b/styles/website.scss
@@ -16,7 +16,7 @@ $sidebar-font-size : 1rem;
 $sidebar-logo-height: auto;
 
 $color-primary: #FFBF00;
-$color-text: #00ffff;
+$color-text: white;
 
 $heading-map : (
                 color: $color-primary,
